Domain_2-Information_Gathering_and_Vulnerability_Scanning/2.3/README.md
# 2.3 - Given a scenario, analyze the results of a reconnaissance exercise.

## Fingerprinting:
* ***Fingerprinting*** -- The identification of the specific OS/service/software version that is in use by a host/system/network. 
	* Mapping the network → Provides details on hosts & services running on the target environment. Use these scans:
		* *Ping Scans* – to learn which machines are responding.
		* *TCP Scans* – to check for open and listening TCP ports. (well-known ports are 0-1023)
		* *OS Fingerprinting* – to identify the operating systems in use on the network.
* ***Networks*** -- Using nmap and NSE to perform network discovery.
* ***Network devices*** -- By default, Nmap uses the following during host discovery:
	* TCP SYN packet to port 443; TCP ACK packet to port 80; ICMP type 8 (echo request); ICMP type 13 (timestamp request); ARP requests to obtain MAC address details.
* ***OSs*** -- Once a response is received from the target, Nmap will make a best effort guess of what OS is in use. 
	* Some of the key elements used to determine the OS include:
		* *Don’t Fragment (DF) bit* --Is the DF bit in the IPv4 header on or off?
		* *Window Size (WS)* -- What does the OS use as a WS?
		* *Time to Live (TTL)* -- What is the TTL value set on the outbound packet?
	* A Linux command to show the current version of the OS and kernel information → `lsb_release`.

## Analyze output from:
* ***DNS Lookups*** -- 
	* With DNS, there are two servers that can be at risk for compromise: (1) Authoritative, and (2) Recursive.
		* Nmap has several methods to test DNS for vulnerabilities.
	* Zone files contain info and RRs (Resource Records).
		* Zone files (if not properly configured) can be exposed and leak RR information.

* ***Website Crawling*** -- Process of systematically attempting to find every page on a given website. [*SEE ABOVE*]
* ***Network Traffic*** -- Use Wireshark to sniff traffic (passively obtain info). Important items to determine:
	* [1] Determine where the target is located; [2] Determine what it is you want when you gain access to a device or host; [3] Determine when/how you should attack; [4] Determine which host(s) and devices are interesting and worth pursuing.

* ***ARP Traffic*** -- MAC addresses can be useful in several ways. 
	* Discover hosts on a network. 
	* Use MAC addresses to launch an ARP poisoning attack.

* ***Nmap Scans*** -- Nmap can provide helpful results when discovering network devices and vulnerabilities.
	* When viewing the results of a scan, Nmap has several available formats for outputting the results:
		* [1] Interactive output– human readable output and is the default; [2] XML output (-oX)– a flexible format option; [3] Grepable output (-oG)– creates a grepable friendly file; [4] Normal output (-oN)– similar to ‘interactive’, and you can save the results of an Nmap scan to a text file for later analysis.

















## Active Recon #1- Intro:
* It’s beneficial to retrieve intel from passive techniques (i.e. OSINT and passive scans), but your true goal is to gain access to target files/systems. Use the passive intel to then conduct active recon. 
	* Find → vulnerabilities, which could then be utilized to gain access to data (or control of a target device). 
	* Scanning → actively connecting to a system and getting a response to identify hosts, open ports, services, users, domain names, etc.
	* Scanning is more generic. Enumeration is more in depth; Fingerprinting is most detailed!
	* Enumeration usually focuses on 5 key areas:
	* [1] Hosts,  [2] Services,  [3] Domains,  [4] Users, and [5] URLs.

## Active Recon #2- Enumeration [of hosts & services]:  
* *Fingerprinting* -- used to capture detailed info regarding host or service during reconnaissance. 
### Host discovery:
* ***Hosts*** -- I.e. server, workstation, client, mobile device,  IoTs, and/or networking device (switch, router, APs). 
* Ping sweep for hosts → Pinging devices, and noting which devices respond (it’s there and reachable!). 
* ***Nmap*** -- Use it to perform host discovery. Typing just `nmap` will provide you with the available flags that you can use. 
* ***net*** – a suite of tools that can be used to perform operations on groups, users, account policies, network shares, etc.
* `arp -a` → the ARP cache will be displayed. Provides a list of all the other machines' MACs that have recently communicated with the host (which you're currently on/accessing). 
* `ipconfig` → To determine the IP. `ipconfig /displaydns` will display resolved domain names. 
### Service Information:
* ***Services*** -- Background software that performs automated tasks, responds to hardware events, or listens for data requests from other software.
* There are many services running that can provide valuable intel.
	* SMTP (TCP port 25) → Extract email addresses. Enumerate SMTP server information. Search for open relays.
	* DNS (TCP port 53) → Elicit DNS zone transfers and discover DNS subdomains.
	* SMB (TCP port 139) → Retrieve directory information, list, and transfer files. smb-enum-shares & smb-enum-shares.
* *Versioning*:
	* `nmap -sV` 
	* *Banner grab* -- using a program (ex. Netcat, wget, telnet) to connect to a given port that is running a service. If we connect to port 80 (and it's running a web server), we can get a response back from that server and analyze the details. 
		* Best to use automated tools instead of manually banner-grabbing → Zenmap, Nmap, Metasploit.

## Active Recon #3- Enumeration [web & cloud discovery]:  
### Domains:
* *Active Directory (AD)* -- a database that stores, organizes, and enables access to other objects under its control. Many Windows attacks rely on trying to bypass Kerberos authentication. 
* Your pentest scope may say *.company.com (so all subdomains are fair game). Tools to find subdomains (Domain Brute-Forcing):
	* `nmap –script=dns-brute.nse`; `theHarvester --dns-brute`; fierce; dnsmap; sublist3r.
* The domains or subdomains under the root domain are considered *children*. 
* *Organizational Unit (OU)* -- Used w/in a domain to group similar objects (i.e. computers, groups, or even users) together. 
* ***Users*** -- Used to represent a person/process that will access a given resource in the domain. 
	* A *Group* is a collection of users. Permissions can be assigned to groups, which are provided to their users.
		* Using PowerShell → use `Get-NetGroupMember`  to receive a list of domain members belonging to a given group. You could also see what resources (file shares & servers) you now have access to (if you have access to a user account). Also, use `Get-NetLoggedOn` to see users that are logged onto a given computer.
	* Using `net` → using `net user` will list all users on a given machine. Also, using `net groups` will list all groups on a given machine.

### URLs (Uniform Resource Locators):
* Once you have a list of valid URLs, you can use various tools to gain more details about a web server (or the apps running on those URLs). 
* Nmap has a scripting engine that can enumerate URLs → `nmap –script=http-enum <target URL>`
	* It’ll return a list of services running on that web server, and apps that are actually running the server (ex. Content management system: Drupal, Joomla, Wordpress).

## Active Recon #4- Packet Crafting:  
* ***Packet Crafting*** -- A technique that allows for the generation of a network packet → w/ the specific data content described by an attacker or pentester. Instead of going with something off of the shelf (i.e. nmap, telnet, ncat, etc.), you may want to craft a packet to perform a specific task. 
	* Using too many crafted packets can be noisy, so try to only craft as few as possible/needed.
* Why craft a packet? 
	* [a] When trying to set unusual TCP flags to see how a firewall will respond.
	* [b] To fragment packets. Try to sneak by IDS/IPS. You can fragment packets that are unable to be reassembled (BUT, this will crash a system). 
* Packet crafting stages:
	* [1] Assemble → Create a packet to be sent.
	* [2] Edit → Modifies the content of the crafted packet.	
	* [3] Play → Sends/re-sends the packet onto the network.
	* [4] Decode → Captures and analyzes traffic generated by the packet sent (using a tool like Wireshark). 
* Packet crafting tools:
	* [1] Scapy → - Library you can use for python. Can be used for packet-crafting. 
	* [2] hPing → Free CLI packet-crafting tool. Craft spoofed network packets to exploit vulnerable firewalls and IDS/IPS.

## Active Recon #5- Network Traffic:  
* ***Sniffing*** -- (AKA Packet sniffing) Look at the packet information that is crossing your computer. 
	* You’ll need to put your NIC into promiscuous mode → instead of rejecting packets that aren’t destined for you, it’ll grab them all. Wireshark, Tcpdump, etc.
	* DHCP and ARP traffic (good for host discovery).
	* Ex. `sudo wireshark` → opens Wireshark app. Start a capture. We can enumerate new target hosts → Picks up ARPs for all sorts of requests, credentials, etc.
* ***Capture API requests & responses*** -- Tools (i.e. Burp Suite & OWASP ZAP) could be used to capture this info.

## Active Recon #6- Wardriving:  
* ***Wardriving*** -- While driving around in your car, you're using a wireless scanner to locate wireless endpoints/APs.
	* After locating these APs → you could use them to gain access into your target’s network (especially if they’re OPEN access points).

## Active Recon #7- Website Recon:  
* You’ll need to determine → the software used to run the client's websites, the OS the server is using, hosted 1st/3rd-party.
	* Seek to discover the resources used by the server, and any hidden information. 
	* CMSs (Content Management Systems) → ex. WorkPress. Check for vulnerabilities. 
	* Determine the function of the website (details, e-commerce, etc.).
### Website Crawling:
* *Website Crawling* -- Process of systematically attempting to find EVERY page on a given website.
	* Mapping out a site in its entirety. Find the directories, and the contents of them. 
	* Google’s search engine is constantly crawling every website in the world to identify all pages to add to their search engine. 
	* Crawling a website usually involves bots and scripts that automatically browse the website and index all pages.
* Web crawlers (AKA *Spiders*) will attempt to find hidden pages. The ***robots.txt*** file is used to prevent this.
	* The *robots.txt* file is used to inform web crawlers which directories are [1] allowed, AND [2] which should be ignored! It should prevent crawlers/spiders from finding/accessing hidden pages.
	* Pentesters/attackers → Go to TargetWebsite.com/robots.txt to view a short simple text file/page. This page mentions ‘allow’ and ‘disallow’ pages (ex. __/wp-admin/). This will mistakenly allow attackers to learn of pages that they shouldn't known about. 
	* Companies shouldn’t rely solely on robots.txt to prevent crawlers. Companies should enable → directory permissions in addition to robots.txt file. 
* Tools → OWASP ZAP; Dirbuster.
### Scraping Websites:
* *Website Crawling* involves scanning a whole website, while ***Scraping*** involves looking for something specific.
* You use an automation tool to find it!
	* SET Toolkit, Nikto, Dirb, EyeWitness → Allow you to clone a website, and then analyze and extract info afterwards.
	* CeWL (Custom Word List generator) → a ruby app that can crawl a given URL up to a specific depth. It then returns a list of words that can be used w/ a password cracker. 

### Directory Fuzzing:
* We used OWASP ZAP to find the directories of a given site. BUT what about the directories that we didn’t find? We want to fuzz them out (maybe other directories exist, so let's use tools to search).
	* Tools → Dirbuster; gobuster; Dirb.

## Active Recon #8- Tokens:  
* Tokens are used a lot nowadays. They're useful for enumeration since they’re used for authorization and access. 
	* Tools → Burp Suite & OWASP ZAP (these tools could be used to capture this info). 
* ***Scoping*** -- What’s the scope of the token? What kind of access does it give me (where can I go)? What can I do with it? 
* ***Issuing*** -- How are the tokens issues?
* ***Revocation*** -- How long does the token last? Is there auto-revoking? Is the token disabled when the session ends (or stays active)?

## Active Recon #9- Cloud Asset Discovery:  
* If your target site uses cloud at all, how are they using cloud?
	* Ex. AWS, Azure, etc.
	* Is there infrastructure to connect with? Are S3 buckets used (online storage)? How are we accessing this storage?
	* How do I find what cloud assets are being utilized by a target?
* Use an automation tool → *cloud_enum*. This tool will show available switches. It’ll start scraping. 

## Active Recon #10- Third-party Hosted Services:
* Are there any connections being made? Are web apps grabbing anything from 3rd party hosts (ex. OAuth)?

## Active Recon #11- Defense Detection & Avoidance:
* ***Detection detection*** -- Pentesters should first try to detect the target’s security controls during a pentest engagement. After discovering the client’s controls, pentesters should avoid being detected by them (***Detection avoidance***).
* Security controls to avoid:
	* ***Load balancer*** (LB) -- It’s a core networking solution that distributes traffic across multiple servers inside a server farm. 
		* Tools/methods to locate a LB → [1] LBD (LB Detector) is an app in Kali Linux; [2] Nslookup (it may show evidence of load balancing); [3] WAFW00F; [4] Nmap; [5] *http headers* during banner grabbing (LB evidence could be in this information). 
	* ***WAF*** -- A firewall specifically geared towards blocking/directing traffic going to & from a web application.
		* How to detect if there’s a WAF → [1] use the *WAFW00F* tool; [2] Nmap. 
		* How to avoid detection → [1] Use obfuscation techniques to confuse these web apps; [2] Encoding & encrypting info (URL Encoding, Base-64); [3] WAF will recognize obvious things (SQL Injection, etc.) but try to find something outside of this. 
	* ***Antivirus*** -- It's used to prevent, scan, detect, and delete viruses or malware. It's safe to assume that an AV is always installed (ex. Windows Defender). 
		* How to detect if there’s AV → [1] Try to upload some malware, and see if it gets killed (AV should notice a malicious signature); [2] AV related traffic – Known IP for certain AV(s); [3] Social engineering. 
		* How to avoid detection → [1] Metamorphic virus. Create custom programs/software (there’s no signature for custom-built things); [2] Signature obfuscation; [3] Fileless malware. A lot of OS functions can be used to conduct malicious activity; [4] Encryption. Eliminate the ability of the AV to detect the malware (pentesters will encrypt their payloads). 
	* ***Firewalls*** -- A type of networking security device that monitors and filters incoming and outgoing network traffic. ACLs are used by a firewall. 
		* How to detect if there’s a firewall → [1]Traceroute; [2] Firewalk (aka Firewalking); [3] Nmap (options for firewall/IDS evasion & spoofing).
		* How to avoid detection → [1] Fragmentation; [2] Use proxy; [3] Use decoys.
